# NDKTemplateMinimal

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  AppThread.c  AppThread.h  Application.c  Application.h  CMakeLists.txt  Engine.cmake  EntryPoint.c  Log.h  Runtime.h
app/src/main/Engine/Source/Include/: Engine.h
app/src/main/Engine/Source/Runtime/: Core.h
app/src/main/Engine/Source/Runtime/Core/: Base.h
app/src/main/Engine/Source/Runtime/Core/Base/: Enum.h  Micro.h  Type.h
app/src/main/Engine/Source/Runtime/Core/Container/: DynamicArray.c  DynamicArray.h  LinkedList.c  LinkedList.h  LinkedListNode.c  LinkedListNode.h
app/src/main/Engine/Source/Runtime/Core/Mathematics/: Color.c  Color.h  Math.c  Matrix3.c  Matrix3.h  Matrix3Extension.c  Matrix3Extension.h  Matrix4.c  Matrix4.h  Matrix4Extension.c  Matrix4Extension.h  Vector2.c  Vector2.h  Vector3.c  Vector3.h  Vector4.c  Vector4.h
app/src/main/Engine/Source/Runtime/Core/String/: StringConverter.c  StringConverter.h  Unicode.c  Unicode.h
app/src/main/Engine/Source/Runtime/Core/System/: HeapMemory.c  HeapMemory.h  Memory.c  Timer.c  Timer.h
app/src/main/Engine/Source/Runtime/Function/Render/: Serface.c  Serface.h
app/src/main/Engine/Source/Runtime/Function/Render/ImmediateModeUI/: AsciiGlyphInfo.h  Text.c  Text.h
app/src/main/Engine/Source/Runtime/Platform/HAL/: HAL.description.txt
app/src/main/Engine/Source/Runtime/Platform/Windows/: Windows.h
app/src/main/Engine/Source/Runtime/Resource/: Bitmap.c  Bitmap.h  Wave.c  Wave.h
(+3 files in other folders)
